<resources>
    <string name="app_name">home</string>
    <string name="total_posts">Total posts</string>
    <string name="total_records">Total records</string>
    <string name="total_unique_tags">Total unique tags</string>
    <string name="total_unique_first_tags">Total unique first tags</string>
    <string name="birthdays_count">Birthdays count</string>
    <string name="missing_birthdays_count">Missing birthdays count</string>
    <string name="crash_log_title">View Crash Log</string>
    <string name="crash_log_subject">Crash Log</string>
</resources>
